--- a/Conf.properties
+++ b/Conf.properties
@@ -1,1 +1,5 @@
 DefaultTimeout=60
+mysqldriver=com.mysql.jdbc.Driver
+mysqlurl=jdbc:mysql://60.205.150.51:3306/ebus?useUnicode=true&characterEncoding=utf8
+mysqluser=root
+mysqlpassword=123456
