--- a/pom.xml
+++ b/pom.xml
@@ -101,5 +101,10 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
      <artifactId>jedis</artifactId>
      <version>2.9.0</version>
    </dependency>
+   	<dependency>
+	  <groupId>mysql</groupId>
+	  <artifactId>mysql-connector-java</artifactId>
+	  <version>6.0.6</version>
+	</dependency>
   </dependencies>
 </project>
